--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-player": "^5.2.2",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "ffmpeg-static": "^4.4.1"
   }
 }
