--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.4.1",
     "@discordjs/voice": "^0.9.0",
+    "axios": "^0.27.2",
     "discord-player": "^5.2.2",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
