--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@discordjs/voice": "^0.9.0",
     "axios": "^0.27.2",
     "discord-player": "^5.2.2",
+    "discord-tts": "^1.2.1",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
